# create-clib-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  create_clib_plugin.h.in  main.cpp
.github/workflows/: build.yml
